[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/settings/settings scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/settings/settings theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[node name="SettingsScene" type="Panel"]
self_modulate = Color( 0, 0, 0, 0.752941 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 1 )

[node name="BackButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 56.0
text = "BACK"

[node name="ExitButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 56.0

[node name="LineEditName" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -352.0
margin_right = 256.0
margin_bottom = -304.0
align = 1
placeholder_text = "NAME"

[node name="Label" type="Label" parent="LineEditName"]
margin_left = -192.0
margin_right = -8.0
margin_bottom = 48.0
text = "YOUR_NAME:"
align = 2
valign = 1

[node name="HSliderMaster" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -42.0
margin_right = 320.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 320, 32 )
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 11

[node name="CheckBoxMaster" type="CheckButton" parent="HSliderMaster"]
margin_left = -192.0
margin_top = 10.0
margin_right = -1.0
margin_bottom = 58.0
grow_horizontal = 0
grow_vertical = 0
pressed = true
text = "MASTER"
align = 2

[node name="HSliderBGM" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 11

[node name="CheckBoxBGM" type="CheckButton" parent="HSliderBGM"]
margin_left = -192.0
margin_top = 8.0
margin_bottom = 56.0
pressed = true
text = "BGM"
align = 2

[node name="HSliderSE" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 104.0
margin_right = 320.0
margin_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.8
tick_count = 11

[node name="CheckBoxSE" type="CheckButton" parent="HSliderSE"]
margin_left = -192.0
margin_top = 8.0
margin_bottom = 56.0
pressed = true
text = "SE"
align = 2

[node name="ButtonOnlineServer" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = -128.0
margin_right = -256.0
margin_bottom = -80.0
text = "wss://opencombat3.onrender.com"

[node name="Label" type="Label" parent="ButtonOnlineServer"]
anchor_bottom = 1.0
margin_left = -192.0
margin_right = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "ONLINE_SERVER"
align = 2
valign = 1

[node name="LineEditSave" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = -64.0
margin_right = -256.0
margin_bottom = -16.0
editable = false

[node name="Label" type="Label" parent="LineEditSave"]
margin_left = -192.0
margin_right = -8.0
margin_bottom = 49.0
grow_horizontal = 0
grow_vertical = 2
text = "SAVE_DIR"
align = 2
valign = 1

[node name="ButtonSave" type="Button" parent="."]
margin_left = 1080.0
margin_top = 664.0
margin_right = 1272.0
margin_bottom = 712.0
text = "SAVE"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="text_changed" from="LineEditName" to="." method="_on_LineEditName_text_changed"]
[connection signal="value_changed" from="HSliderMaster" to="." method="_on_HSliderMaster_value_changed"]
[connection signal="toggled" from="HSliderMaster/CheckBoxMaster" to="." method="_on_CheckBoxMaster_toggled"]
[connection signal="value_changed" from="HSliderBGM" to="." method="_on_HSliderBGM_value_changed"]
[connection signal="toggled" from="HSliderBGM/CheckBoxBGM" to="." method="_on_CheckBoxBGM_toggled"]
[connection signal="value_changed" from="HSliderSE" to="." method="_on_HSliderSE_value_changed"]
[connection signal="toggled" from="HSliderSE/CheckBoxSE" to="." method="_on_CheckBoxSE_toggled"]
[connection signal="pressed" from="ButtonOnlineServer" to="." method="_on_ButtonOnlineServer_pressed"]
[connection signal="pressed" from="ButtonSave" to="." method="_on_ButtonSave_pressed"]
